# vfashion_server

./: .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  br-cities-data.sql  br-state_region-data.sql  common.py  config.py  f2bconfig.py  flimv.py  gmail_common.py  gmail_send.py  main.py  models.py  pyproject.toml  representatives.py  requirements.txt  task_manager.py  users.py
b2b/: api.py  brand.py  cart.py  collection.py  comission.py  customer_group.py  invoices.py  orders.py  payment_condition.py  price_table.py  product_stock.py  shipping.py  target.py
cmm/: ai.py  api.py  auth.py  category.py  cities.py  config.py  countries.py  customers.py  email.py  integration.py  legal_entities.py  measure_unit.py  products-category.py  products-model.py  products-type.py  products.py  products_category.py  products_grid.py  products_model.py  products_type.py  reports.py  state_regions.py  translate_colors.py  translate_sizes.py  upload.py  users.py
crm/: api.py  config.py  funil.py  funil_stage.py  funnel.py  funnel_stage.py  opportunities.py
docs/: br-cities-data.sql  br-state_region-data.sql  cmm_report.sql  countries-data.sql  procedure-to-populate-calendar.sql
fpr/: api.py  devolution.py  reasons.py  steps.py
integrations/: consistem.py  erp.py  excia.py  organiza_textil.py  organizatextil.py  shipping.py  sisplan.py  sys_textil.py  systextil.py  vexta.py  virtual_age.py  virtualage.py  webpic.py
models/: helpers.py  public.py  tenant.py
mpg/: api.py
pdv/: api.py  consumer.py
pos/: api.py  consumer.py
scm/: api.py  calendar.py  event_type.py  (+2 more)
(+121 files in other folders)
