[project]
name = "vfashion-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-httpauth (>=4.8.0,<5.0.0)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "simplejson (>=3.20.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
